--- a/public/main.css
+++ b/public/main.css
@@ -48,28 +48,54 @@ h1 {
 }
 
 .ui-button {
-  height: 48px;
-  width: 48px;
-  margin: 4px 0;
+  height: 64px;
+  width: 64px;
+  margin: 6px 0;
 
-  transition: background-color 0.1s ease-in-out;
+  transition: background-color 0.25s ease-in-out;
   
   background-color: #1e2331cd;
   border: none;
-  border-radius: 8px;
+  border-radius: 16px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+#button-select {
+  background-color: hsl(36, 0%, 60%);
+  box-shadow: 0 6px 0 0px hsl(36, 0%, 40%);
+}
+
+#button-bulldoze {
+  background-color: hsl(342, 100%, 77%);
+  box-shadow: 0 6px 0 0px hsl(342, 100%, 30%);
+}
+
+#button-road {
+  background-color: hsl(201, 100%, 80%);
+  box-shadow: 0 6px 0 0px hsl(201, 100%, 30%);
+}
+
+#button-play {
+  background-color: hsl(56, 100%, 80%);
+  box-shadow: 0 6px 0 0px hsl(56, 100%, 30%);
+}
+
 .ui-button.selected {
-  background-color: #121622d3;
-  outline: 2px solid rgb(227, 227, 227);
+  /* background-color: #121622d3;
+  outline: 2px solid rgb(227, 227, 227); */
+  /* filter: brightness(1.3); */
+  transition: box-shadow 0.25s ease-in-out;
+  box-shadow: none;
+  outline: 3px solid rgb(227, 227, 227);
 }
 
 .ui-button:not(.selected):hover {
-  background-color: #121622d3;
+  /* background-color: #121622d3; */
+  filter: brightness(1.1);
+  box-shadow: none;
 }
 
 .ui-container {
@@ -78,10 +104,10 @@ h1 {
 }
 
 .toolbar-icon {
-  width: 24px;
-  height: 24px;
+  width: 36px;
+  height: 36px;
   pointer-events: none;
-  filter: brightness(0) invert(1);
+  /* filter: brightness(0) invert(1); */
 }
 
 /* TITLE BAR */
