--- a/public/main.css
+++ b/public/main.css
@@ -37,10 +37,39 @@ h1 {
   box-shadow: 0 2px 0 0px #023a71;
 }
 
-#ui-toolbar {
+.extended-container {
+  position: absolute;
+  background-color: #00000048;
+  padding: 8px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  margin-right: 16px;
+  margin-left: 0px;
+  border-radius: 16px;
+  height: 300px !important;
+  overflow-y: scroll;
+
+  box-shadow: 0 2px 0 0px #023a71;
+
+  /* display: flex; */
+  /* flex-direction: column; */
+  justify-content: flex-start;
+  visibility: hidden;
+} 
+
+.tool-panel {
   position: absolute;
   height: auto;
   top: 64px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+#ui-toolbar {
+  /* position: absolute;
+  height: auto;
+  top: 64px; */
 
   display: flex;
   flex-direction: column;
@@ -51,6 +80,25 @@ h1 {
   height: 64px;
   width: 64px;
   margin: 6px 0;
+
+  transition: background-color 0.25s ease-in-out;
+  
+  background-color: #1e2331cd;
+  border: none;
+  border-radius: 16px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ui-extended-button {
+  height: 56px;
+  width: 56px;
+  margin-top: 6px;
+  margin-bottom: 12px;
+  margin-left: 0px;
+  margin-right: 0px;
 
   transition: background-color 0.25s ease-in-out;
   
@@ -83,7 +131,21 @@ h1 {
   box-shadow: 0 6px 0 0px hsl(56, 100%, 30%);
 }
 
+#button-entrance {
+  background-color: hsl(110, 100%, 80%);
+  box-shadow: 0 6px 0 0px hsl(110, 100%, 30%);
+}
+
 .ui-button.selected {
+  /* background-color: #121622d3;
+  outline: 2px solid rgb(227, 227, 227); */
+  /* filter: brightness(1.3); */
+  transition: box-shadow 0.25s ease-in-out;
+  box-shadow: none;
+  outline: 3px solid rgb(227, 227, 227);
+}
+
+.ui-extended-button.selected {
   /* background-color: #121622d3;
   outline: 2px solid rgb(227, 227, 227); */
   /* filter: brightness(1.3); */
