--- a/public/main.css
+++ b/public/main.css
@@ -236,7 +236,7 @@ h1 {
   filter: brightness(0) invert(1);
 }
 
-#profit-icon {
+#revenue-icon {
   position: relative;
   width: 32px;
   height: 32px;
