--- a/public/main.css
+++ b/public/main.css
@@ -201,12 +201,12 @@ h1 {
   align-items: center;
 }
 
-.title-bar-right-elements {
-  /* flex: 1 1 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
+.title-bar-left-items {
+  display: flex !important;
+  justify-content: space-around !important;
+  align-items: center;
 }
+
 
 .title-bar-items {
   flex: 1 1 33%;
@@ -220,7 +220,15 @@ h1 {
   position: relative;
   width: 32px;
   height: 32px;
-  top: 1px;
+  top: 4px;
+  filter: brightness(0) invert(1);
+}
+
+#person-icon {
+  position: relative;
+  width: 32px;
+  height: 32px;
+  top: 4px;
   filter: brightness(0) invert(1);
 }
 
