--- a/public/main.css
+++ b/public/main.css
@@ -20,12 +20,14 @@ h1 {
 }
 
 #root-window {
-  height: 100%;
+  /* height: 100%; */
+  height: 200%;
 }
 
 #render-target {
   position: relative;
-  height: 100%;
+  height: 50%;
+  /* height: 100%; */
 }
 
 .container {
