--- a/public/main.css
+++ b/public/main.css
@@ -256,6 +256,27 @@ h1 {
   filter: brightness(0) invert(1);
 }
 
+#fixed-cost-icon {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  top: 2px;
+  filter: brightness(0) invert(1);
+}
+
+#variable-cost-icon {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  top: 2px;
+  filter: brightness(0) invert(1);
+}
+
+.cost-additional-div {
+  font-size: 0.6em !important;
+
+}
+
 #revenue-icon {
   position: relative;
   width: 32px;
