--- a/public/main.css
+++ b/public/main.css
@@ -453,3 +453,28 @@ summary {
 summary::-webkit-details-marker {
   display: none;
 }
+
+/* Plots  */
+.road-plot-container {
+  width: 300px;
+  height: 250px;
+  margin-top: 30px;
+  align-items: center;
+  text-align: center;
+  background-color: #FFF3;
+}
+
+.road-plot-container #road-tile-heatmap {
+  width: 300px;
+  height: 220px;
+  align-items: center;
+}
+
+.visitor-plot-container {
+  width: 300px;
+  height: 250px;
+  margin-top: 30px;
+  align-items: center;
+  text-align: center;
+  background-color: #FFF3;
+}
