--- a/public/main.css
+++ b/public/main.css
@@ -8,7 +8,8 @@ html, body {
   margin: 0;
   font-family: Bebas-Regular, sans-serif;
 
-  background: linear-gradient(0deg, #3a5177, #81b1e0);
+  background-color: #81b1e0;
+  /* background: linear-gradient(0deg, #3a5177, #81b1e0); */
 }
 
 h1 {
@@ -21,12 +22,13 @@ h1 {
 
 #root-window {
   /* height: 100%; */
-  height: 200%;
+  height: 400%;
 }
 
 #render-target {
   position: relative;
-  height: 50%;
+  height: 25%;
+  background: linear-gradient(0deg, #3a5177, #81b1e0);
   /* height: 100%; */
 }
 
@@ -456,18 +458,13 @@ summary::-webkit-details-marker {
 
 /* Plots  */
 .road-plot-container {
-  width: 300px;
-  height: 250px;
+  width: 500px;
+  /* height: 250px; */
   margin-top: 30px;
   align-items: center;
   text-align: center;
   background-color: #FFF3;
-}
-
-.road-plot-container #road-tile-heatmap {
-  width: 300px;
-  height: 220px;
-  align-items: center;
+  margin-left: 40px;
 }
 
 .visitor-all-plots {
@@ -476,8 +473,23 @@ summary::-webkit-details-marker {
 }
 
 .visitor-plot-container {
-  width: 300px;
-  height: 250px;
+  width: 500px;
+  /* height: 250px; */
+  margin-top: 30px;
+  align-items: center;
+  text-align: center;
+  background-color: #FFF3;
+  margin-left: 40px;
+}
+
+.ride-queue-all-plots {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.ride-queue-plot-container {
+  width: 500px;
+  /* height: 250px; */
   margin-top: 30px;
   align-items: center;
   text-align: center;
