--- a/public/main.css
+++ b/public/main.css
@@ -542,6 +542,9 @@ summary::-webkit-details-marker {
   background-color: rgba(255, 255, 255, 0.717);
   margin-left: 10px;
   margin-right: 10px;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .visitor-all-plots {
@@ -558,6 +561,9 @@ summary::-webkit-details-marker {
   background-color: rgba(255, 255, 255, 0.717);
   margin-left: 10px;
   margin-right: 10px;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .ride-status-all-plots {
@@ -579,6 +585,9 @@ summary::-webkit-details-marker {
   background-color:  rgba(255, 255, 255, 0.717);
   margin-left: 10px;
   margin-right: 10px;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .ride-revenue-all-plots {
@@ -595,4 +604,6 @@ summary::-webkit-details-marker {
   background-color:  rgba(255, 255, 255, 0.717);
   margin-left: 10px;
   margin-right: 10px;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
