added stand statistics

--- a/public/main.css
+++ b/public/main.css
@@ -607,3 +607,21 @@ summary::-webkit-details-marker {
   font-size: 12px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.stand-all-plots {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.stand-plot-container {
+  width: 400px;
+  /* height: 250px; */
+  margin-top: 30px;
+  align-items: center;
+  text-align: center;
+  background-color:  rgba(255, 255, 255, 0.717);
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
