--- a/public/main.css
+++ b/public/main.css
@@ -649,3 +649,25 @@ summary::-webkit-details-marker {
   margin: auto;
   margin-top: 50px;
 }
+
+.plot-text-section {
+  width: 100%;
+  /* height: 70px; */
+  font-family: Arial Rounded MT Bold, sans-serif;
+  text-align: center;
+  background-color:  rgba(255, 238, 252, 0.82);
+  margin-top: 20px;
+  margin-bottom: -20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.plot-text-section .plot-title {
+  font-size: 20px;
+}
+
+.plot-text-section .plot-description {
+  font-size: 12px;
+  width: 65%;
+  margin: auto;
+}
